# botrytis

./: .gitignore  .yarnrc  README.md  package.json  requirements.txt  setup.cfg  setup.py
botrytis/: __main__.py
botrytis/db/: .gitignore  __init__.py  blast.py  generate.py  generate.sql  model.py
botrytis/db/data/: readme
botrytis/pages/: 404.html  _icon.html  _meta.html  _scripts.html  _style.html  annotation.html  base.html.j2  error.html  error.html.j2  footer.html  gene.html  navbar.html  search.html.j2  splash.html.j2
botrytis/pages/annotation/: index.html  index.html.j2  page.html  page.html.j2
botrytis/pages/blast/: base.html.j2  n.html.j2  p.html.j2  result.html.j2  x.html.j2
botrytis/pages/domain/: index.html.j2  page.html.j2
botrytis/pages/gene/: index.html  index.html.j2  page.html  page.html.j2
botrytis/pages/splash/: index.html
botrytis/server/: __init__.py  filters.py
src/db/: __init__.py  createTables.sql  generate.py  init.py
