[metadata]
name = botrytis
version = 0.1.0
author = Martin Larralde
author-email = martin.larralde@ens-paris-saclay.fr
home-page = https://github.com/altonos/botrytis
description = A small webapp to display Botrytis cinerea sequencing data
long-description = file: README.rst
license = MIT
license-file = COPYING
platform = any
keyword = bioinformatics, genomics, botrytis, webapp
classifiers =
	Development Status :: 4 - Beta
	Framework :: CherryPy
	Intended Audience :: Science/Research
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Programming Language :: Python :: 3.7
	Programming Language :: JavaScript
	Topic :: Scientific/Engineering :: Bio-Informatics
project_urls =
  Bug Reports = https://github.com/althonos/botrytis/issues

[options]
zip_safe = false
include_package_data = true
python_requires >= 3.6
packages = find:
setup_requires =
  biopython ~=1.73
	cherrypy ~=18.0
	jinja2 ~=2.10
install_requires =
	%(setup_requires)s

[build_js]
packages =
	EBI-Icon-fonts@^1.3.0
	bootstrap@^4.2.1
	colormaps@^1.1.2
	feature-viewer@^0.1.44
	jquery@^1.9.1
	popper.js@^1.14.6
